fix: modify overflow for dialog

--- a/themes/desktop/dialog/index.scss
+++ b/themes/desktop/dialog/index.scss
@@ -75,6 +75,7 @@
       overflow: hidden auto;
       .dp-dialog-body {
         height: 100%;
+        overflow: hidden auto;
       }
     }
     &.is-header {
